--- a/public/assets/css/account-user.css
+++ b/public/assets/css/account-user.css
@@ -5,7 +5,8 @@
   color: #80C2BB; }
   #account .container {
     margin: auto;
-    width: 1154px; }
+    width: 1154px; 
+    }
   #account form h1 {
     font-size: 50px;
     color: #80C2BB;
